# turtlebot_velodyne

./: README.md
velodyne_description/: CMakeLists.txt  package.xml  setup.py
velodyne_description/include/velodyne_description/: wap_control.h
velodyne_description/launch/: agent.launch  patrol.launch  pointop.launch  turtlebot.launch
velodyne_description/rviz/: turtlebot_velodyne.rviz
velodyne_description/src/: control_turtle.cpp  convert.cpp  main.cpp  point_op.py  transform.cpp  wap_control.cpp
velodyne_description/urdf/: turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_library.urdf.xacro  turtlebot_velodyne.urdf.xacro
velodyne_description/world/: map.world  map_reduced_tmp3.world
velodyne_simulator/: CMakeLists.txt  package.xml
